# ProteinView

./: Cargo.toml
src/: app.rs  bridge.rs  edit_history.rs  event.rs  main.rs
src/render/: camera.rs
src/ui/: chain_info_panel.rs  editspec_panel.rs  header.rs  help_overlay.rs  helpbar.rs  iteration_panel.rs  mod.rs  regions_panel.rs  sequence_panel.rs  statusbar.rs  viewport.rs
